# pytoml11

./: .gitignore  CMakeLists.txt  LICENCE  README.md  pyproject.toml
.github/workflows/: checks.yml  wheels.yml
src/: .clang-format  pytoml11.cpp  toml.hpp
src/pytoml11/: __init__.py  __init__.pyi  _value.pyi
tests/: test_array.py  test_basic.py  test_boolean.py  test_date.py  test_datetime.py  test_float.py  test_fmt_bugs.py  test_integer.py  test_item.py  test_null.py  test_operator.py  test_string.py  test_table.py  test_time.py
tests/__snapshots__/: test_fmt_bugs.ambr
