[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"


[project]
name = "pytoml11"
version = "0.0.5"
description="Bindings for toml11"
readme = "README.md"
authors = [
  { name = "Thijs Miedema", email = "opensource@tmiedema.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "syrupy"]
ci = ["cibuildwheel"]
test = ["pytest", "syrupy"]


[tool.scikit-build]
wheel.expand-macos-universal-tags = true
minimum-version = "build-system.requires"
cmake.build-type = "Debug"


[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
log_cli_level = "INFO"
filterwarnings = [
  "error",
  "ignore::pytest.PytestCacheWarning",
]
testpaths = ["tests"]


[tool.cibuildwheel]
build-frontend = "build[uv]"
test-command = "pytest {project}/tests"
test-extras = ["test"]

[tool.cibuildwheel.pyodide]
build-frontend = {name = "build", args = ["--exports", "whole_archive"]}

[tool.ruff.lint]
select = [
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
  "NPY",         # NumPy specific rules
  "PD",          # pandas-vet
]
ignore = [
  "PLR09",    # Too many X
  "PLR2004",  # Magic comparison
]
fixable = ["ALL"]

[dependency-groups]
dev = [
    "pybind11-stubgen>=2.5.1",
    "pybind11>=2.13.6",
    "pytest>=8.3.4",
]

[tool.fonk]
default = { command="all", flags=["fix"] }
flags = [
  { name = "fix", description = "Autofix issues where possible" }
]

[tool.fonk.alias.all]
commands = ["ruff-format", "ruff-check", "pytest"]
flags = ["fix"]

[tool.fonk.command.ruff-format]
type = "uvx"
arguments = ["ruff", "format", "--check", "src/pytoml11"]
flags = [
  { on = "fix", remove = "--check" },
  { on = "verbose", add = "--verbose" },
  { on = "quiet", add = "--quiet" },
]

[tool.fonk.command.ruff-check]
type = "uvx"
arguments = ["ruff", "check", "src/pytoml11"]
flags = [
  { on = "fix", add = "--fix" },
  { on = "verbose", add = "--verbose" },
  { on = "quiet", add = "--quiet" },
]

[tool.fonk.command.pytest]
type = "uv"
arguments = ["pytest", "tests"]
flags = [
  { on = "verbose", add = "-vvv" },
  { on = "quiet", add = "-q" },
  { on = "fail-quick", add = "-x"},
]
